# Monkey_Typer

./: CMakeLists.txt  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp  main.cpp
assets/: ENG_Wordlist.txt  PL_Wordlist.txt
